create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2133,6 +2133,112 @@ body {
   margin-top: 1rem;
   margin-bottom: 0;
 }
+.cid-s2pbCVrgnN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #232323;
+}
+.cid-s2pbCVrgnN .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-s2pbCVrgnN .mbr-author-name {
+  font-weight: bold;
+}
+.cid-s2pbCVrgnN .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-s2pbCVrgnN .mbr-figure,
+  .cid-s2pbCVrgnN img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-s2pbCVrgnN .media-content {
+    padding-top: 1.5rem !important;
+  }
+}
+.cid-s2pc1CXaIs {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-s2pc1CXaIs .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-s2pc1CXaIs .mbr-author-name {
+  font-weight: bold;
+}
+.cid-s2pc1CXaIs .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-s2pc1CXaIs .mbr-figure,
+  .cid-s2pc1CXaIs img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-s2pc1CXaIs .media-content {
+    padding-top: 1.5rem !important;
+  }
+}
+.cid-s2pcbvhthd {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #232323;
+}
+.cid-s2pcbvhthd .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-s2pcbvhthd .mbr-author-name {
+  font-weight: bold;
+}
+.cid-s2pcbvhthd .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-s2pcbvhthd .mbr-figure,
+  .cid-s2pcbvhthd img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-s2pcbvhthd .media-content {
+    padding-top: 1.5rem !important;
+  }
+}
+.cid-s2pchUxtqx {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-s2pchUxtqx .testimonial-text {
+  font-style: italic;
+  color: #676767;
+  font-weight: 300;
+}
+.cid-s2pchUxtqx .mbr-author-name {
+  font-weight: bold;
+  color: #232;
+}
+.cid-s2pchUxtqx .mbr-author-desc {
+  color: #232;
+}
+@media (max-width: 991px) {
+  .cid-s2pchUxtqx .mbr-figure,
+  .cid-s2pchUxtqx img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+}
 .cid-rnUvaGh1mk {
   padding-top: 90px;
   padding-bottom: 90px;
